@@ -1,3 +1,4 @@
+- `ChannelCreationDecider` now holds off on creating channels if the onchain amount is small relative to all your funds and is small for a "large" channel (~0.16777215 BTC).  This should prevent CLBOSS from making lots of 10mBTC channels when your node is well-funded.
 - CLBOSS can now close bad channels.  Enable this ***EXPERIMENTAL*** feature by passing `--clboss-auto-close=true` option to `lightningd`.  If enabled, the `clboss-unmanage` command can disable this for particular peers using the `close` key.
 - Remove `libsodium` library, instead use SHA256 implementation from Bitcoin and our own code for basic securtiy issues.
 - Add `clboss-unmanage` command to suppress certain aspects of auto-management.
